# tree-sitter-parsers

./: .gitignore  CLAUDE.md  README.md  build-vim-parsers.py  build.py  lock.json  sync_sources.py
caddy/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
caddy/bindings/c/: tree-sitter-caddy.h  tree-sitter-caddy.pc.in
caddy/src/: grammar.json  node-types.json  parser.c  scanner.c
cairo/: CHANGELOG.md  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  cairo_0.js  cairo_1.js  grammar.js  package.json  tree-sitter.json  utils.js
cairo/script/: known_failures.txt  parse-examples
cairo/src/: grammar.json  node-types.json  parser.c  scanner.c
cuda/: Cargo.toml  Makefile  package-lock.json  package.json  pyproject.toml  tree-sitter.json
cuda/src/: grammar.json
fusion/: .gitignore  .gitlab-ci.yml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json
fusion/src/: grammar.json  node-types.json  parser.c  scanner.c
gaptst/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
gaptst/src/: parser.c
gdshader/: CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
gdshader/queries/: locals.scm  tags.scm
gdshader/src/: grammar.json  node-types.json  parser.c  scanner.c
groq/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
groq/src/: grammar.json  node-types.json  parser.c
javadoc/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
javadoc/.github/: dependabot.yml
javadoc/injection_tests/: Makefile  pyproject.toml  requirements.txt  tester.py
javadoc/src/: grammar.json  node-types.json  parser.c  scanner.c
jjdescription/: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
jjdescription/queries/: highlights.scm  injections.scm
jjdescription/src/: grammar.json  node-types.json  parser.c  scanner.c
kcl/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
kcl/src/: grammar.json  node-types.json  scanner.c
kitty/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
kitty/example/: kitty.conf
kitty/grammar/: actions.js  colors.js  includes.js  keyboard.js  mouse.js  options.js  primitive.js
kitty/src/: grammar.json  node-types.json
luap/: CHANGELOG.md  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  grammar.js  package.json  tree-sitter.json
luap/src/: grammar.json  node-types.json  parser.c
muttrc/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
muttrc/src/: grammar.json  node-types.json  parser.c
printf/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
printf/src/: grammar.json  node-types.json  parser.c
proto/: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
proto/src/: grammar.json  node-types.json  parser.c
razor/: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  syntax.md  tree-sitter.json
razor/src/: grammar.json  node-types.json  scanner.c
re2c/: Cargo.toml  README.md  binding.gyp  grammar.js  package.json
re2c/src/: grammar.json  node-types.json  parser.c
rifleconf/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
rifleconf/src/: grammar.json  node-types.json  parser.c
ron/: .gitignore  Cargo.toml  LICENSE-MIT  Package.swift  README.md  grammar.js  package.json
ron/examples/: struct-0.ron
ron/script/: parse-examples
ron/src/: grammar.json  node-types.json  parser.c  scanner.c
runescript/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
runescript/src/: grammar.json  node-types.json  parser.c  scanner.c
snl/: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  example.st  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
snl/.github/: dependabot.yml
snl/queries/: highlights.scm  injections.scm
snl/src/: grammar.json  node-types.json  parser.c
sproto/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.sproto  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-sproto.wasm  tree-sitter.json
sproto/queries/: highlights.scm
sproto/src/: grammar.json  node-types.json  parser.c
systemtap/: .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
systemtap/src/: grammar.json  parser.c
(+1234 files in other folders)
