[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-caddy"
description = "Caddyfile support"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "caddy"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Vladimir <opa-oz> Levin", email = "opaozhub@gmail.com" }]
requires-python = ">=3.9"
license.text = "GPL-3.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/opa-oz/tree-sitter-caddy"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
