[package]
name = "tree-sitter-fusion"
description = "fusion grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = [
    "tree-sitter",
    "grammar",
    "parser",
    "lexer",
    "neos",
    "fusion"
]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-fusion"
edition = "2018"
readme = "README.md"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
