[package]
name = "tree-sitter-gaptst"
description = "gaptst grammar for tree-sitter"
version = "0.4.2"
authors = ["Reinis Cirpons <rc234@st-andrews.ac.uk>"]
keywords = ["incremental", "parsing", "gaptst"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/gap-system/tree-sitter-gaptst"
edition = "2021"
license = "MIT"
readme = "README.md"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
