[package]
name = "tree-sitter-groq"
description = "Query language made at Sanity.io for filtering and projecting JSON documents"
version = "1.1.0"
authors = ["Alan Russell <ajrussellaudio@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "groq"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ajrussellaudio/tree-sitter-groq"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
