[package]
name = "tree-sitter-javadoc"
description = "Parser for Javadoc documentation comments"
version = "0.0.4"
authors = ["Robert Muir <rmuir@apache.org>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "javadoc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/rmuir/tree-sitter-javadoc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
