[package]
name = "tree-sitter-re2c"
description = "re2c grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "re2c"]
categories = ["parsing", "text-editors", "re2c"]
repository = "https://github.com/tree-sitter/tree-sitter-re2c"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
