[package]
name = "tree-sitter-systemtap"
version = "0.2.0"
authors = [ "OK Ryoko <ryoko@kyomu.jp.net>" ]
edition = "2021"
description = "SystemTap grammar for the tree-sitter parsing library"
repository = "https://github.com/ok-ryoko/tree-sitter-systemtap"
license = "MIT"
keywords = [ "incremental", "parsing", "tree-sitter", "systemtap" ]
categories = [ "parsing", "text-editors" ]
build = "bindings/rust/build.rs"
include = [ "bindings/rust/*", "queries/*", "src/*", "grammar.js" ]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
